--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               >Nathaniel Patterson</a
             >
           </p>
-          <p>Email: odst0016@gmail.com</p>
+          <p>Email: nathanieljonpatterson@gmail.com</p>
         </div>
       </div>
     </header>
